--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -70,7 +70,7 @@
                     <!--<textarea name="description" id="description" class="form-control" cols="30"-->
                     <label for="description">问题补充 (必填，请参照右侧提示):</label>
 
-                    <textarea name="description" th:value="${description}" id="description"  class="form-control"
+                    <textarea name="description" th:text="${description}" id="description"  class="form-control"
                               cols="30" rows="10"></textarea>
 
                 </div>
@@ -85,8 +85,12 @@
                 <!--<button type="submit" class="btn btn-success btn-publish">发布</button>-->
                 <div class="container-fluid main ">
                     <div class="row">
-                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"
-                             th:if="${error != null}"></div>
+                        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                            <div class="alert alert-danger col-lg-12 col-md-12 col-sm-12 col-xs-12"
+                                 th:text="${error}"
+                                 th:if="${error != null}">
+                            </div>
+                        </div>
                         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                             <button type="submit" class="btn btn-success btn-publish ">
                                 发布
