--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -3,9 +3,9 @@
 <head>
     <title>码匠社区</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
 </head>
@@ -18,6 +18,8 @@
             <hr>
             <!--action填写当你点击表单submit时提交的地址-->
             <form action="/publish" method="post">
+                <!--存入question id-->
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）:</label>
                     <!--<input type="text" class="form-control" id="title" name="title" placeholder="问题标题……">-->
