secondary comment pages

--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -78,6 +78,15 @@ body {
     margin-top: 5px;
 }
 
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon :hover {
+    color: #499ef3;
+}
+
 .menu .active {
     color: #499ef3;
 }
