--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -47,6 +47,16 @@ body {
     width: 50%;
 }
 
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info {
+    margin-right: 10px;
+}
+
 .community-menu {
     display: block;
     color: #999;
