--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -2,12 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>码匠社区</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
-    <script src="js/bootstrap.min.js" type="application/javascript"></script>
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="/js/jquery-3.4.1.min.js"></script>
+    <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/community.js"></script>
 </head>
 <body>
 <div th:insert="~{navigation.html :: nav}"></div>
@@ -24,7 +25,8 @@
                     <label for="title">问题标题（简单扼要）:</label>
                     <!--<input type="text" class="form-control" id="title" name="title" placeholder="问题标题……">-->
                     <input type="text" class="form-control" th:value="${title}" id="title" name="title"
-                           placeholder="问题标题……">
+                           autocomplete="off"
+                           placeholder="问题标题.....">
                 </div>
                 <div class="form-group">
                     <!--<label for="title">问题补充 (必填，请参照右侧提示):</label>-->
@@ -40,7 +42,32 @@
                     <!--<input type="text" class="form-control" id="tag" name="tag" placeholder="输入标签，以，号分隔">-->
                     <label for="tag">添加标签:</label>
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
-                           placeholder="输入标签，以，号分隔">
+                           autocomplete="off"
+                           placeholder="输入标签，以，分隔"
+                           onclick="showSelectTag()">
+
+                    <div id="select-tag" class="publish-tag-tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory: ${tags}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+
+                        <div class="tab-content">
+                            <div role="tabpanel" class="tab-pane" th:id="${selectCategory.categoryName}"
+                                 th:each="selectCategory: ${tags}">
+                                <span>
+                                    <span class="label label-info" th:each="selectTag: ${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                          th:data-tag="${selectTag}"
+                                          th:text="${selectTag}">
+                                    </span>
+                                </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <!--<button type="submit" class="btn btn-success btn-publish">发布</button>-->
